# cyclecs

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  Doxyfile  README.md  ]  build.sh  diff.diff
data/base/gfx/shaders/: font.frag  font.vert  mesh.vert  quad.frag  quad.vert  sprite.frag  sprite2d.frag  sprite2d.vert
data/base/graphics/shaders/: board.frag  board.vert  lines.frag  lines.vert
data/core/gfx/shaders/: mesh.frag
docs/: CMakeLists.txt  README.md  conf.py  index.rst  requirements.txt
docs/api/: index.rst
docs/api/app/: app.rst  assets.rst  index.rst  window.rst
docs/api/ecs/: camera.rst  components.rst  ecs.rst  index.rst  presets.rst  systems.rst
docs/api/gfx/: index.rst  primitive.rst  renderer.rst  shader.rst  texture2d.rst
docs/api/gfx/gl/: mesh.rst  renderer.rst  shader.rst  texture2d.rst
docs/api/io/: ascii.rst  font.rst  image.rst  index.rst
docs/api/util/: arena.rst  array.rst  error.rst  index.rst  logger.rst  macros.rst  mem.rst  profiler.rst  string.rst  table.rst  types.rst  xxhash32.rst
examples/: squares.c  tic_tac_toe.c
include/cls/app/: app.h  assets.h  window.h
include/cls/ecs/: ecs.h
include/cls/ecs/component/: camera.h  components.h
include/cls/ecs/preset/: presets.h
include/cls/ecs/system/: button.h  systems.h  ui_button.h
include/cls/gfx/: api.h  batch.h  cmd.h  gfx_api.h  material.h  primitive.h  quad.h  renderer.h  shader.h  texture2d.h
include/cls/gfx/gl/: mesh.h  renderer.h  shader.h  texture2d.h
include/cls/io/: ascii.h  fascii.h  ffont.h  fimage.h  font.h  image.h
include/cls/util/: allocator.h  arena.h  array.h  debug.h  error.h  globals.h  logger.h  macros.h  mem.h  profiler.h  string.h  table.h  types.h  util.h  xxhash32.h
libs/glad/include/glad/: gl.h
libs/rsv/: .gitignore  CMakeLists.txt  test.sh
libs/rsv/include/rsv/: rsv.h
libs/rsv/include/rsv/containers/: darray.h  htable.h
libs/rsv/tests/: rsv_test.c  test.h  test_darray.h  test_htable.h
src/: main.c
src/app/: app.c  assets.c  window.c
src/base/ecs/component/: board.h  board_button.h
src/base/ecs/sys/: move_sys.h
src/base/ecs/system/: board_button.h  move.h
src/base/ecs/system/main/: board_button.h  camera.h  winner.h
src/base/ecs/system/ui/: benchmark.h
src/base/game/: constants.h  game.c  game.h
src/core/app/: app.c  app.h  app_time.c  app_time.h  assets.c  assets.h  ecs.c  ecs.h  event_queue.c  event_queue.h  input.c  input.h  time.c  time.h  timing.c  timing.h  ui.c  ui.h  window.c  window.h
src/core/app/component/renderable/: mesh.h  renderable.h  sprite.h
src/core/ecs/: ecs.c  ecs.h  ecs_ctx.h  ecs_test.h  world.c  world.h
src/core/ecs/comp/: render.h  transform.h  transform_comp.h
src/core/ecs/component/: camera.c  camera.h  node.h  transform2d.h  transform3d.h
src/core/ecs/component/renderable/: mesh2d.h  renderable.h  renderable2d.h  renderable3d.h  sprite2d.h  ui.h
src/core/ecs/sys/: render_sys.h
src/core/ecs/system/: render_system.c  ui_button.h
src/core/gfx/: api.h  batch.h  camera.h  cmd.h  color.h  draw_call.h  draw_call2d.c  draw_call2d.h  draw_call3d.h  material.h  mesh.c  mesh.h  quad.h  renderer.c  renderer.h  shader.h  texture2d.h  transform.h
src/core/gfx/gl/: mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  texture2d.c  texture2d.h
src/core/gfx/renderer/: batch.c  batch.h  camera.c  camera.h  cmd.h  renderer.c  renderer.h
src/core/gfx/renderer/plugins/: ecs.c  plugins.h  ui.c
src/core/graphics/: renderer.c  renderer.h
src/core/graphics/gl/: gl_renderer.c  gl_renderer.h
src/core/io/: fascii.c  fascii.h  ffont.c  ffont.h  fimage.c  fimage.h  fimg.c  fimg.h  ftxt.c  ftxt.h
src/core/util/: allocator.c  allocator.h  arena.c  arena.h  array.c  array.h  debug.h  err.h  error.h  globals.h  logger.c  logger.h  mem.c  mem.h  profiler.h  table.c  table.h  types.h  util.h  xxhash32.c  xxhash32.h  xxhash64.c  xxhash64.h
src/ecs/: ecs.c
src/ecs/component/: camera.c
src/ecs/preset/: presets.c
src/ecs/system/: button.c  systems.c  ui_button.c
src/gfx/: renderer.c
src/gfx/gl/: mesh.c  renderer.c  shader.c  texture2d.c
src/io/: ascii.c  fascii.c  ffont.c  fimage.c  font.c  image.c
src/util/: allocator.c  arena.c  array.c  logger.c  mem.c  profiler.c  string.c  table.c  xxhash32.c
